# mcp-datos-uruguay-ben

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-lint.yml
src/mcp_ckan_datos_uruguay_ben/: __init__.py
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/consultas/: __init__.py  abastecimiento.py  consumo.py  consumo_hogares.py  consumo_transporte.py  electricidad.py  emisiones.py  glosario.py  importaciones.py
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/consultas/helpers/: __init__.py  ben_palette.py  charts.py  colores.py  data.py  format.py  metodologia.py  units.py
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/ben-importacion-de-gas-natural/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/ben-importacion-de-petroleo-y-carga-de-refineria/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/ben-importacion-y-exportacion-de-electricidad/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/consumo-sector-residencial-por-fuente/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/consumo-sector-transporte-por-fuente/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/miem-abastecimiento-de-energia-por-fuente/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/miem-ben-factor-de-emision-de-co2-del-sin/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/miem-consumo-final-energetico-por-fuente/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/miem-consumo-final-energetico-por-sector/: README.md
src/mcp_ckan_datos_uruguay_ben/datasets/BEN/data/miem-emisiones-de-co2-por-sector/: README.md
src/mcp_ckan_datos_uruguay_ben/resources/: __init__.py
src/mcp_ckan_datos_uruguay_ben/resources/ben/: __init__.py  book.py  libro.py  visualizador_ben.py
tests/: conftest.py  test_raw_data_in_ai_response.py
(+2 files in other folders)
